v6.0/changelog/v6.x.x/v6.x.x.md
# Release history
-----------------

<a name="v601"></a>
## Version 6.0.1

**:star: New features**

* Support for [Python 3.12](https://www.python.org/downloads/release/python-3120/)

**:rocket: Enhancements**

* Packaging license file.


<a name="v600"></a>
## Version 6.0.0

**:star: New features**

* Completely new module for time series. Read more in the [user guide][time-series].
* Support for [Python 3.11](https://www.python.org/downloads/release/python-3110/) and drop support for [Python 3.8](https://www.python.org/downloads/release/python-380/)
  and [Python 3.9](ttps://www.python.org/downloads/release/python-390/).
* New data engines. Read more in the [user guide][data-engines].
* Added the `dask` [parallelization backend][parallel-execution].
* Improved memory optimizations. Read more in the [user guide][memory-considerations].
* Added the `iterative` strategy for [numerical imputation][imputer].
* Added the `hdbscan` strategy to the [Pruner][] class.
* Use the [`ignore`][atomclassifier-ignore] parameter to ignore columns in the dataset.
* New [update_traces][atomclassifier-update_traces] method to further customize your plots.

**:pencil: API changes**

* The [plot_results][] method is divided into [plot_results][] and [plot_bootstrap][]
  and accepts any metric.
* The [FeatureGrouper][] class no longer accepts a `name` parameter. Provide
  the group names directly through the `group` parameter as dict.
* Rework of the [register][adaboost-register] method.
* The `multioutput` attribute is deprecated. Multioutput meta-estimators are
  now assigned automatically.
* Model tags have to be separated from the acronym by an underscore.
* The [`engine`][atomclassifier-engine] parameter is now a dict.
* The `automl` method is deprecated.

**:rocket: Enhancements**

* Transformations only on `y` are now accepted, e.g., `atom.scale(columns=-1)`.
* The [Imputer][] class has many more strategies for numerical columns designed
  for time series.
* The [evaluate][atomclassifier-evaluate] method highlights the highest score
  per metric.
* Full support for [pandas nullable dtypes](https://pandas.pydata.org/docs/user_guide/integer_na.html).
* The dataset can now be provided as callable.
* The [FeatureExtractor][] class can extract features from the dataset's index.
* Subplots can now share axes on the [canvas][atomclassifier-canvas].
* The [save][atomclassifier-save] and [save_data][atomclassifier-save_data]
  methods now accept [pathlib.Path][] objects as `filename`.
* Cleaner representation on hover for the [plot_timeline][] method.
* The `cv` key in `ht_params` now accepts a custom cross-validation generator.
* Improved error message for incorrect stratification of multioutput datasets.
* Rework of the [shrink][atomclassifier-shrink] method.

**:bug: Bug fixes**

* Fixed a bug where the [cross_validate][adaboost-cross_validate] method could
  fail for pipelines that changed the number of rows.
* Fixed a bug where the [Pruner][] class didn't drop all outlier clusters.
* Fixed a bug where the pipeline could fail for transformers that returned a
  series.
* Fixed a bug where the pipeline could fail for transformers that reset its
  internal attributes during fitting.
* Fixed a bug where the [register][adaboost-register] method failed in Databricks.
* Fixed a bug where tuning hyperparameter for a `base_estimator` inside a custom
  meta-estimator would fail.
* Fixed a bug where the data properties' `@setter` could fail for numpy arrays.
* Fixed a bug where reference lines for some plots didn't lie exactly on the unity line.
